# warframe-companion

./: .gitignore  .sourcery.yaml  README.md  pyproject.toml
warframe_companion/: app.py
warframe_companion/src/: inventory.py
warframe_companion/src/base_classes/: arcane.py  arcane_slot.py  attack_handler.py  damage_instance.py  final_weapon_stats_handler.py  item.py  mod.py  mod_slot.py  weapon.py  weapon_upgrades_handler.py
warframe_companion/src/commands/: main_command.py
warframe_companion/src/enumerations/: __init__.py  accuracy_descs.py  compatibility_tags.py  mastery_ranks.py  mod_slot_types.py  noise_levels.py  polarities.py  projectile_types.py  trigger_types.py  warframes.py  weapons.py
warframe_companion/src/items/a/: aklato.py
warframe_companion/src/items/b/: bo.py  boar.py  bolto.py  braton.py  bronco.py  burston.py
warframe_companion/src/items/c/: cronus.py
warframe_companion/src/items/d/: dual_skana.py
warframe_companion/src/items/f/: furax.py  furis.py
warframe_companion/src/items/g/: gorgon.py
warframe_companion/src/items/l/: lato.py  latron.py  lex.py
warframe_companion/src/items/m/: mk1_braton.py
warframe_companion/src/items/s/: sicarus.py  skana.py  snipetron.py  strun.py
warframe_companion/src/utilities/: read_inventory_into_dict.py  verify_inventory_data.py
